2011-03-04  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* include/winbase.h (__MINGW_EXTENSION): Define.
	(OVERLAPPED): Add __MINGW_EXTENSION around nameless union /
	struct to correct issue with -std=c99.

2011-03-02  Corinna Vinschen  <corinna@vinschen.de>

	* include/ddk/winddk.h (TIMER_INFORMATION_CLASS): Define.
	(TIMER_BASIC_INFORMATION): Define.
	(NtQueryTimer): Define.
	(ZwQueryTimer): Define.

2010-12-27  David Byron  <dbyron0@users.sourceforge.net>

	* include/winioctl.h (STORAGE_BUS_TYPE): Define.

2010-12-27  Seth Jackson  <sethj@users.sourceforge.net>

	* include/winbase.h (GetComputerNameEx): Define.

2010-12-27  Ryan Lortie  <desrt@desrt.ca>

	* include/winbase.h (TzSpecificLocalTimeToSystemTime): Define.

2010-12-27  Markus Koenig  <basilo@users.sourceforge.net>

	* include/gdiplus/gdipluspixelformats.h (PixelFormatIndexed,
	PixelFormatGDI, PixelFormatAlpha, PixelFormatPAlpha,
	PixelFormatExtended, PixelFormatCanonical, PixelFormatUndefined,
	PixelFormatDontCare, PixelFormat1bppIndexed, PixelFormat4bppIndexed,
	PixelFormat8bppIndexed, PixelFormat16bppGrayScale,
	PixelFormat16bppRGB555, PixelFormat16bppRGB565, PixelFormat16bpp1555,
	PixelFormat24bppRGB, PixelFormat32bppRGB, PixelFormat32bppARGB,
	PixelFormat32bppPARGB, PixelFormat48bppRGB, PixelFormat64bppARGB,
	PixelFormat64bppPARGB, PixelFormatMax): Fix definition.

2010-10-20  Seth Jackson  <sethj@users.sourceforge.net>

	* include/commctrl.h (TC_ITEMHEADER[AW]): Rename to TCITEMHEADER[AW].
	Add defines for backward compatibility.

2010-12-27  Johann Hanne  <jonnyh33@users.sourceforge.net>

	* include/oaidl.h (GetTypeComp, GetTypeComp, IsMatchingType): Fix defintion.
	* include/objidl.h (AddConnection, ReleaseConnection): Ditto.
	* include/winbase.h (EnumResourceLanguagesA, EnumResourceLanguagesW,
	EnumResourceNamesA, EnumResourceNamesW, EnumResourceTypesA,
	EnumResourceTypesW): Ditto.
	* include/winnt.h (_SYSTEM_POWER_CAPABILITIES): Ditto.
