@@ -270,6 +270,10 @@ extern "C" {
 #define GET_TAPE_DRIVE_INFORMATION 1
 #define SET_TAPE_MEDIA_INFORMATION 0
 #define SET_TAPE_DRIVE_INFORMATION 1
+#if (_WIN32_WINNT >= 0x0600)
+#define THREAD_MODE_BACKGROUND_BEGIN 0x00010000
+#define THREAD_MODE_BACKGROUND_END 0x00020000
+#endif
 #define THREAD_PRIORITY_ABOVE_NORMAL 1
 #define THREAD_PRIORITY_BELOW_NORMAL (-1)
 #define THREAD_PRIORITY_HIGHEST 2
